// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class-properties live-rewrite 1`] = `
"var _anywhere = require('anywhere');
class Example {
  #test1 = _anywhere.test1;
  test2 = _anywhere.test2;
  #test3() {
    return _anywhere.test3;
  }
  test4() {
    return _anywhere.test4;
  }
  get #test5() {
    return _anywhere.test5;
  }
  get test6() {
    return _anywhere.test6;
  }
  #test7 = this.#test1;
  #test8() {
    return this.#test3();
  }
  get #test9() {
    return this.#test5();
  }
}"
`;

exports[`class-properties private 1`] = `
"class Example {
  #property = this;
}"
`;

exports[`class-properties private-method 1`] = `
"class Example {
  #method() {
    console.log(this);
  }
}"
`;

exports[`class-properties public 1`] = `
"class Example {
  property = this;
}"
`;

exports[`disable-strict-mode strictMode-false 1`] = `
"require("foo");
require("foo-bar");
require("./directory/foo-bar");"
`;

exports[`importInterop-node export-default-from 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _dep2.default;
  }
});
var _dep = require('dep');
var _dep2 = _interopDefault(_dep);"
`;

exports[`importInterop-node export-named-and-default-from 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _dep2.default;
  }
});
Object.defineProperty(exports, "name", {
  enumerable: true,
  get: function () {
    return _dep.name;
  }
});
var _dep = require('dep');
var _dep2 = _interopDefault(_dep);"
`;

exports[`importInterop-node export-named-from 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "name", {
  enumerable: true,
  get: function () {
    return _dep.name;
  }
});
var _dep = require('dep');"
`;

exports[`importInterop-node import-default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _foo = require("foo");
var foo = _interopDefault(_foo);
foo.default();"
`;

exports[`importInterop-node import-named 1`] = `
"var _foo = require("foo");
_foo.named();"
`;

exports[`importInterop-node import-named-and-default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _foo = require("foo");
var foo = _interopDefault(_foo);
foo.default();
_foo.named();"
`;

exports[`importInterop-node import-wildcard 1`] = `
"function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _foo = require('foo');
var foo = _interopNamespace(_foo);
foo.bar();
foo.baz();"
`;

exports[`importInterop-none export-from 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _foo2.default;
  }
});
var _foo = require('foo');
var _foo2 = _interopDefault(_foo);"
`;

exports[`importInterop-none import-default-only 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _foo = require("foo");
var foo = _interopDefault(_foo);
foo.default();"
`;

exports[`importInterop-none import-wildcard 1`] = `
"function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _foo = require('foo');
var foo = _interopNamespace(_foo);
foo.bar();
foo.baz();"
`;

exports[`interop export-all 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default2;
  }
});
var _react = require('react');
Object.keys(_react).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _react[k];
      }
    });
  }
});
var _default = _interopDefault(_react);
// The fact that this exports both a normal default, and all of the names via
// re-export is an edge case that is important not to miss. See
// https://github.com/babel/babel/issues/8306 as an example.

var _default2 = _default.default;"
`;

exports[`interop export-default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = 42;"
`;

exports[`interop export-default-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = {};"
`;

exports[`interop export-default-3 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = [];"
`;

exports[`interop export-default-4 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = foo;"
`;

exports[`interop export-default-5 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _ref;
  }
});
function _ref() {}"
`;

exports[`interop export-default-6 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _ref;
  }
});
class _ref {}"
`;

exports[`interop export-default-7 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
function foo() {}"
`;

exports[`interop export-default-8 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return Foo;
  }
});
class Foo {}"
`;

exports[`interop export-default-9 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
var foo;"
`;

exports[`interop export-default-10 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = function () {
  return "foo";
}();"
`;

exports[`interop export-default-11 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
exports.Cacher = Cacher;
var _default = new Cacher();
function Cacher(databaseName) {}"
`;

exports[`interop export-destructured 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "x", {
  enumerable: true,
  get: function () {
    return x;
  }
});
Object.defineProperty(exports, "y", {
  enumerable: true,
  get: function () {
    return y;
  }
});
exports.f1 = f1;
exports.f2 = f2;
exports.f3 = f3;
exports.f4 = f4;
let x = 0;
let y = 0;
function f1() {
  ({
    x
  } = {
    x: 1
  });
}
function f2() {
  ({
    x,
    y
  } = {
    x: 2,
    y: 3
  });
}
function f3() {
  [x, y, z] = [3, 4, 5];
}
function f4() {
  [x,, y] = [3, 4, 5];
}"
`;

exports[`interop export-from 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _foo = require("foo");
Object.keys(_foo).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _foo[k];
      }
    });
  }
});"
`;

exports[`interop export-from-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-3 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return _foo.bar;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-4 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-5 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-6 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return _foo.bar;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-7 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo2.default;
  }
});
var _foo = require("foo");
var _foo2 = _interopDefault(_foo);"
`;

exports[`interop export-from-8 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
Object.defineProperty(exports, "foo1", {
  enumerable: true,
  get: function () {
    return _foo.foo1;
  }
});
Object.defineProperty(exports, "foo2", {
  enumerable: true,
  get: function () {
    return _foo.foo2;
  }
});
Object.defineProperty(exports, "foo3", {
  enumerable: true,
  get: function () {
    return _foo.foo3;
  }
});
Object.defineProperty(exports, "foo4", {
  enumerable: true,
  get: function () {
    return _foo.foo4;
  }
});
Object.defineProperty(exports, "foo5", {
  enumerable: true,
  get: function () {
    return _foo.foo5;
  }
});
Object.defineProperty(exports, "foo6", {
  enumerable: true,
  get: function () {
    return _foo.foo6;
  }
});
Object.defineProperty(exports, "foo7", {
  enumerable: true,
  get: function () {
    return _foo.foo7;
  }
});
Object.defineProperty(exports, "foo8", {
  enumerable: true,
  get: function () {
    return _foo.foo8;
  }
});
Object.defineProperty(exports, "foo9", {
  enumerable: true,
  get: function () {
    return _foo.foo9;
  }
});
Object.defineProperty(exports, "foo10", {
  enumerable: true,
  get: function () {
    return _foo.foo10;
  }
});
Object.defineProperty(exports, "foo11", {
  enumerable: true,
  get: function () {
    return _foo.foo11;
  }
});
Object.defineProperty(exports, "foo12", {
  enumerable: true,
  get: function () {
    return _foo.foo12;
  }
});
Object.defineProperty(exports, "foo13", {
  enumerable: true,
  get: function () {
    return _foo.foo13;
  }
});
Object.defineProperty(exports, "foo14", {
  enumerable: true,
  get: function () {
    return _foo.foo14;
  }
});
Object.defineProperty(exports, "foo15", {
  enumerable: true,
  get: function () {
    return _foo.foo15;
  }
});
Object.defineProperty(exports, "foo16", {
  enumerable: true,
  get: function () {
    return _foo.foo16;
  }
});
Object.defineProperty(exports, "foo17", {
  enumerable: true,
  get: function () {
    return _foo.foo17;
  }
});
Object.defineProperty(exports, "foo18", {
  enumerable: true,
  get: function () {
    return _foo.foo18;
  }
});
Object.defineProperty(exports, "foo19", {
  enumerable: true,
  get: function () {
    return _foo.foo19;
  }
});
Object.defineProperty(exports, "foo20", {
  enumerable: true,
  get: function () {
    return _foo.foo20;
  }
});
Object.defineProperty(exports, "foo21", {
  enumerable: true,
  get: function () {
    return _foo.foo21;
  }
});
Object.defineProperty(exports, "foo22", {
  enumerable: true,
  get: function () {
    return _foo.foo22;
  }
});
Object.defineProperty(exports, "foo23", {
  enumerable: true,
  get: function () {
    return _foo.foo23;
  }
});
Object.defineProperty(exports, "foo24", {
  enumerable: true,
  get: function () {
    return _foo.foo24;
  }
});
Object.defineProperty(exports, "foo25", {
  enumerable: true,
  get: function () {
    return _foo.foo25;
  }
});
Object.defineProperty(exports, "foo26", {
  enumerable: true,
  get: function () {
    return _foo.foo26;
  }
});
Object.defineProperty(exports, "foo27", {
  enumerable: true,
  get: function () {
    return _foo.foo27;
  }
});
Object.defineProperty(exports, "foo28", {
  enumerable: true,
  get: function () {
    return _foo.foo28;
  }
});
Object.defineProperty(exports, "foo29", {
  enumerable: true,
  get: function () {
    return _foo.foo29;
  }
});
Object.defineProperty(exports, "foo30", {
  enumerable: true,
  get: function () {
    return _foo.foo30;
  }
});
Object.defineProperty(exports, "foo31", {
  enumerable: true,
  get: function () {
    return _foo.foo31;
  }
});
Object.defineProperty(exports, "foo32", {
  enumerable: true,
  get: function () {
    return _foo.foo32;
  }
});
Object.defineProperty(exports, "foo33", {
  enumerable: true,
  get: function () {
    return _foo.foo33;
  }
});
Object.defineProperty(exports, "foo34", {
  enumerable: true,
  get: function () {
    return _foo.foo34;
  }
});
Object.defineProperty(exports, "foo35", {
  enumerable: true,
  get: function () {
    return _foo.foo35;
  }
});
Object.defineProperty(exports, "foo36", {
  enumerable: true,
  get: function () {
    return _foo.foo36;
  }
});
Object.defineProperty(exports, "foo37", {
  enumerable: true,
  get: function () {
    return _foo.foo37;
  }
});
Object.defineProperty(exports, "foo38", {
  enumerable: true,
  get: function () {
    return _foo.foo38;
  }
});
Object.defineProperty(exports, "foo39", {
  enumerable: true,
  get: function () {
    return _foo.foo39;
  }
});
Object.defineProperty(exports, "foo40", {
  enumerable: true,
  get: function () {
    return _foo.foo40;
  }
});
Object.defineProperty(exports, "foo41", {
  enumerable: true,
  get: function () {
    return _foo.foo41;
  }
});
Object.defineProperty(exports, "foo42", {
  enumerable: true,
  get: function () {
    return _foo.foo42;
  }
});
Object.defineProperty(exports, "foo43", {
  enumerable: true,
  get: function () {
    return _foo.foo43;
  }
});
Object.defineProperty(exports, "foo44", {
  enumerable: true,
  get: function () {
    return _foo.foo44;
  }
});
Object.defineProperty(exports, "foo45", {
  enumerable: true,
  get: function () {
    return _foo.foo45;
  }
});
Object.defineProperty(exports, "foo46", {
  enumerable: true,
  get: function () {
    return _foo.foo46;
  }
});
Object.defineProperty(exports, "foo47", {
  enumerable: true,
  get: function () {
    return _foo.foo47;
  }
});
Object.defineProperty(exports, "foo48", {
  enumerable: true,
  get: function () {
    return _foo.foo48;
  }
});
Object.defineProperty(exports, "foo49", {
  enumerable: true,
  get: function () {
    return _foo.foo49;
  }
});
Object.defineProperty(exports, "foo50", {
  enumerable: true,
  get: function () {
    return _foo.foo50;
  }
});
Object.defineProperty(exports, "foo51", {
  enumerable: true,
  get: function () {
    return _foo.foo51;
  }
});
Object.defineProperty(exports, "foo52", {
  enumerable: true,
  get: function () {
    return _foo.foo52;
  }
});
Object.defineProperty(exports, "foo53", {
  enumerable: true,
  get: function () {
    return _foo.foo53;
  }
});
Object.defineProperty(exports, "foo54", {
  enumerable: true,
  get: function () {
    return _foo.foo54;
  }
});
Object.defineProperty(exports, "foo55", {
  enumerable: true,
  get: function () {
    return _foo.foo55;
  }
});
Object.defineProperty(exports, "foo56", {
  enumerable: true,
  get: function () {
    return _foo.foo56;
  }
});
Object.defineProperty(exports, "foo57", {
  enumerable: true,
  get: function () {
    return _foo.foo57;
  }
});
Object.defineProperty(exports, "foo58", {
  enumerable: true,
  get: function () {
    return _foo.foo58;
  }
});
Object.defineProperty(exports, "foo59", {
  enumerable: true,
  get: function () {
    return _foo.foo59;
  }
});
Object.defineProperty(exports, "foo60", {
  enumerable: true,
  get: function () {
    return _foo.foo60;
  }
});
Object.defineProperty(exports, "foo61", {
  enumerable: true,
  get: function () {
    return _foo.foo61;
  }
});
Object.defineProperty(exports, "foo62", {
  enumerable: true,
  get: function () {
    return _foo.foo62;
  }
});
Object.defineProperty(exports, "foo63", {
  enumerable: true,
  get: function () {
    return _foo.foo63;
  }
});
Object.defineProperty(exports, "foo64", {
  enumerable: true,
  get: function () {
    return _foo.foo64;
  }
});
Object.defineProperty(exports, "foo65", {
  enumerable: true,
  get: function () {
    return _foo.foo65;
  }
});
Object.defineProperty(exports, "foo66", {
  enumerable: true,
  get: function () {
    return _foo.foo66;
  }
});
Object.defineProperty(exports, "foo67", {
  enumerable: true,
  get: function () {
    return _foo.foo67;
  }
});
Object.defineProperty(exports, "foo68", {
  enumerable: true,
  get: function () {
    return _foo.foo68;
  }
});
Object.defineProperty(exports, "foo69", {
  enumerable: true,
  get: function () {
    return _foo.foo69;
  }
});
Object.defineProperty(exports, "foo70", {
  enumerable: true,
  get: function () {
    return _foo.foo70;
  }
});
Object.defineProperty(exports, "foo71", {
  enumerable: true,
  get: function () {
    return _foo.foo71;
  }
});
Object.defineProperty(exports, "foo72", {
  enumerable: true,
  get: function () {
    return _foo.foo72;
  }
});
Object.defineProperty(exports, "foo73", {
  enumerable: true,
  get: function () {
    return _foo.foo73;
  }
});
Object.defineProperty(exports, "foo74", {
  enumerable: true,
  get: function () {
    return _foo.foo74;
  }
});
Object.defineProperty(exports, "foo75", {
  enumerable: true,
  get: function () {
    return _foo.foo75;
  }
});
Object.defineProperty(exports, "foo76", {
  enumerable: true,
  get: function () {
    return _foo.foo76;
  }
});
Object.defineProperty(exports, "foo77", {
  enumerable: true,
  get: function () {
    return _foo.foo77;
  }
});
Object.defineProperty(exports, "foo78", {
  enumerable: true,
  get: function () {
    return _foo.foo78;
  }
});
Object.defineProperty(exports, "foo79", {
  enumerable: true,
  get: function () {
    return _foo.foo79;
  }
});
Object.defineProperty(exports, "foo80", {
  enumerable: true,
  get: function () {
    return _foo.foo80;
  }
});
Object.defineProperty(exports, "foo81", {
  enumerable: true,
  get: function () {
    return _foo.foo81;
  }
});
Object.defineProperty(exports, "foo82", {
  enumerable: true,
  get: function () {
    return _foo.foo82;
  }
});
Object.defineProperty(exports, "foo83", {
  enumerable: true,
  get: function () {
    return _foo.foo83;
  }
});
Object.defineProperty(exports, "foo84", {
  enumerable: true,
  get: function () {
    return _foo.foo84;
  }
});
Object.defineProperty(exports, "foo85", {
  enumerable: true,
  get: function () {
    return _foo.foo85;
  }
});
Object.defineProperty(exports, "foo86", {
  enumerable: true,
  get: function () {
    return _foo.foo86;
  }
});
Object.defineProperty(exports, "foo87", {
  enumerable: true,
  get: function () {
    return _foo.foo87;
  }
});
Object.defineProperty(exports, "foo88", {
  enumerable: true,
  get: function () {
    return _foo.foo88;
  }
});
Object.defineProperty(exports, "foo89", {
  enumerable: true,
  get: function () {
    return _foo.foo89;
  }
});
Object.defineProperty(exports, "foo90", {
  enumerable: true,
  get: function () {
    return _foo.foo90;
  }
});
Object.defineProperty(exports, "foo91", {
  enumerable: true,
  get: function () {
    return _foo.foo91;
  }
});
Object.defineProperty(exports, "foo92", {
  enumerable: true,
  get: function () {
    return _foo.foo92;
  }
});
Object.defineProperty(exports, "foo93", {
  enumerable: true,
  get: function () {
    return _foo.foo93;
  }
});
Object.defineProperty(exports, "foo94", {
  enumerable: true,
  get: function () {
    return _foo.foo94;
  }
});
Object.defineProperty(exports, "foo95", {
  enumerable: true,
  get: function () {
    return _foo.foo95;
  }
});
Object.defineProperty(exports, "foo96", {
  enumerable: true,
  get: function () {
    return _foo.foo96;
  }
});
Object.defineProperty(exports, "foo97", {
  enumerable: true,
  get: function () {
    return _foo.foo97;
  }
});
Object.defineProperty(exports, "foo98", {
  enumerable: true,
  get: function () {
    return _foo.foo98;
  }
});
Object.defineProperty(exports, "foo99", {
  enumerable: true,
  get: function () {
    return _foo.foo99;
  }
});
Object.defineProperty(exports, "foo100", {
  enumerable: true,
  get: function () {
    return _foo.foo100;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-9 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "__proto__", {
  enumerable: true,
  get: function () {
    return _xyz.__proto__;
  }
});
var _xyz = require("xyz");"
`;

exports[`interop export-named 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
var foo;"
`;

exports[`interop export-named-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
var foo, bar;"
`;

exports[`interop export-named-3 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
var foo;"
`;

exports[`interop export-named-4 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
var foo;"
`;

exports[`interop export-named-5 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
var foo, bar;"
`;

exports[`interop export-named-6 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "__proto__", {
  enumerable: true,
  get: function () {
    return __proto__;
  }
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "_", {
  enumerable: true,
  get: function () {
    return _;
  }
});
var _inputJs = require("./input.js");
const __proto__ = null;
const a = 1;
const _ = 2;
console.log(_inputJs.__proto__);"
`;

exports[`interop exports-variable 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "foo2", {
  enumerable: true,
  get: function () {
    return foo2;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
Object.defineProperty(exports, "foo3", {
  enumerable: true,
  get: function () {
    return foo3;
  }
});
Object.defineProperty(exports, "foo4", {
  enumerable: true,
  get: function () {
    return foo4;
  }
});
Object.defineProperty(exports, "foo5", {
  enumerable: true,
  get: function () {
    return foo5;
  }
});
Object.defineProperty(exports, "foo6", {
  enumerable: true,
  get: function () {
    return foo6;
  }
});
Object.defineProperty(exports, "foo7", {
  enumerable: true,
  get: function () {
    return foo7;
  }
});
exports.foo8 = foo8;
Object.defineProperty(exports, "foo9", {
  enumerable: true,
  get: function () {
    return foo9;
  }
});
var foo = 1;
var foo2 = 1,
  bar = 2;
var foo3 = function () {};
var foo4;
let foo5 = 2;
let foo6;
const foo7 = 3;
function foo8() {}
class foo9 {}"
`;

exports[`interop hoist-function-exports 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
exports.nextOdd = nextOdd;
Object.defineProperty(exports, "isOdd", {
  enumerable: true,
  get: function () {
    return isOdd;
  }
});
var _evens = require("./evens");
function nextOdd(n) {
  return _evens.isEven(n) ? n + 1 : n + 2;
}
var isOdd = function (isEven) {
  return function (n) {
    return !isEven(n);
  };
}(_evens.isEven);"
`;

exports[`interop illegal-export-esmodule 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "__esModule", {
  enumerable: true,
  get: function () {
    return __esModule;
  }
});
var __esModule = false;"
`;

exports[`interop illegal-export-esmodule-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "__esModule", {
  enumerable: true,
  get: function () {
    return __esModule;
  }
});
var __esModule;"
`;

exports[`interop imports 1`] = `
"require("foo");
require("foo-bar");
require("./directory/foo-bar");"
`;

exports[`interop imports-default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _foo = require("foo");
var foo = _interopDefault(_foo);
foo.default;
foo.default;"
`;

exports[`interop imports-glob 1`] = `""`;

exports[`interop imports-hoisting 1`] = `"tag\`foo\`;"`;

exports[`interop imports-mixing 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _foo = require("foo");
var foo = _interopDefault(_foo);
foo.default;
_foo.baz;"
`;

exports[`interop imports-named 1`] = `
"var _foo = require("foo");
_foo.bar;
_foo.bar2;
_foo.baz;
_foo.bar;
_foo.bar;
_foo.xyz;"
`;

exports[`interop imports-ordering 1`] = `
"require('./foo');
require('./derp');"
`;

exports[`interop module-shadow 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
exports.module = module;
function module() {}"
`;

exports[`interop multi-load 1`] = `"console.log(helper);"`;

exports[`interop overview 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return test;
  }
});
Object.defineProperty(exports, "test2", {
  enumerable: true,
  get: function () {
    return test2;
  }
});
require("foo");
require("foo-bar");
require("./directory/foo-bar");
var _foo2 = require("foo2");
var foo = _interopDefault(_foo2);
var _foo4 = require("foo4");
var _foo5 = require("foo5");
var test;
var test2 = 5;
_foo4.bar;
_foo5.foo;
foo.default;"
`;

exports[`interop remap 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return test;
  }
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "c", {
  enumerable: true,
  get: function () {
    return b;
  }
});
Object.defineProperty(exports, "e", {
  enumerable: true,
  get: function () {
    return d;
  }
});
Object.defineProperty(exports, "f", {
  enumerable: true,
  get: function () {
    return d;
  }
});
var test = 2;
test = 5;
test++;
(function () {
  var test = 2;
  test = 3;
  test++;
})();
var a = 2;
a = 3;
var b = 2;
b = 3;
var d = 3;
d = 4;"
`;

exports[`lazy-dep import-default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _foo = require("foo");
var foo = _interopDefault(_foo);
console.log(foo.default);"
`;

exports[`lazy-dep import-named 1`] = `
"var _foo = require("foo");
console.log(_foo.foo);"
`;

exports[`lazy-dep import-namespace 1`] = `
"function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _foo = require("foo");
var foo = _interopNamespace(_foo);
console.log(foo);"
`;

exports[`lazy-dep import-namespace-and-named 1`] = `
"function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _foo = require("foo");
var foo = _interopNamespace(_foo);
console.log(foo, _foo.bar);"
`;

exports[`lazy-dep import-namespace-multiple 1`] = `
"function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _foo = require("foo");
var foo = _interopNamespace(_foo);
console.log(foo, foo);"
`;

exports[`lazy-dep reexport-all 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _foo = require("foo");
Object.keys(_foo).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _foo[k];
      }
    });
  }
});"
`;

exports[`lazy-dep reexport-default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo.default;
  }
});
var _foo = require("foo");
var foo = _interopDefault(_foo);"
`;

exports[`lazy-dep reexport-named 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "named", {
  enumerable: true,
  get: function () {
    return _foo.named;
  }
});
var _foo = require("foo");"
`;

exports[`lazy-dep reexport-namespace 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "namespace", {
  enumerable: true,
  get: function () {
    return namespace;
  }
});
var _foo = require("foo");
var namespace = _interopNamespace(_foo);"
`;

exports[`lazy-dep sideeffect 1`] = `"require("foo");"`;

exports[`lazy-dep unused 1`] = `
"require("d");
var _e = require("e");
var _g = require("g");
// This is included explicitly for the side effects, so we keep it

// Only f is unused, we must keep the require call

_e.e;

// The first import is unused, but we keep the require call
// because of the second one

_g.h;"
`;

exports[`lazy-local import-default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _foo = require("./foo");
var foo = _interopDefault(_foo);
console.log(foo.default);"
`;

exports[`lazy-local import-named 1`] = `
"var _foo = require("./foo");
console.log(_foo.foo);"
`;

exports[`lazy-local import-namespace 1`] = `
"function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _foo = require("./foo");
var foo = _interopNamespace(_foo);
console.log(foo);"
`;

exports[`lazy-local reexport-all 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _foo = require("./foo");
Object.keys(_foo).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _foo[k];
      }
    });
  }
});"
`;

exports[`lazy-local reexport-default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo.default;
  }
});
var _foo = require("./foo");
var foo = _interopDefault(_foo);"
`;

exports[`lazy-local reexport-named 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "named", {
  enumerable: true,
  get: function () {
    return _foo.named;
  }
});
var _foo = require("./foo");"
`;

exports[`lazy-local reexport-namespace 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "namespace", {
  enumerable: true,
  get: function () {
    return namespace;
  }
});
var _foo = require("./foo");
var namespace = _interopNamespace(_foo);"
`;

exports[`lazy-local sideeffect 1`] = `"require("./a");"`;

exports[`lazy-whitelist import-default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _white = require("white");
var foo1 = _interopDefault(_white);
var _black = require("black");
var foo2 = _interopDefault(_black);
console.log(foo1.default);
console.log(foo2.default);"
`;

exports[`lazy-whitelist import-named 1`] = `
"var _white = require("white");
var _black = require("black");
console.log(_white.foo1);
console.log(_black.foo2);"
`;

exports[`lazy-whitelist import-namespace 1`] = `
"function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _white = require("white");
var foo1 = _interopNamespace(_white);
var _black = require("black");
var foo2 = _interopNamespace(_black);
console.log(foo1);
console.log(foo2);"
`;

exports[`lazy-whitelist reexport-all 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _white = require("white");
Object.keys(_white).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _white[k];
      }
    });
  }
});
var _black = require("black");
Object.keys(_black).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _black[k];
      }
    });
  }
});"
`;

exports[`lazy-whitelist reexport-default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo.default;
  }
});
var _white = require("white");
var foo = _interopDefault(_white);"
`;

exports[`lazy-whitelist reexport-named 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "named1", {
  enumerable: true,
  get: function () {
    return _white.named1;
  }
});
Object.defineProperty(exports, "named2", {
  enumerable: true,
  get: function () {
    return _black.named2;
  }
});
var _white = require("white");
var _black = require("black");"
`;

exports[`lazy-whitelist reexport-namespace 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "namespace1", {
  enumerable: true,
  get: function () {
    return namespace1;
  }
});
Object.defineProperty(exports, "namespace2", {
  enumerable: true,
  get: function () {
    return namespace2;
  }
});
var _white = require("white");
var namespace1 = _interopNamespace(_white);
var _black = require("black");
var namespace2 = _interopNamespace(_black);"
`;

exports[`lazy-whitelist sideeffect 1`] = `
"require("white");
require("black");"
`;

exports[`misc binding-for-new-vars 1`] = `
"var _fooJs = require('./foo.js');
var y = true;
function f() {
  return [_fooJs.x, y, console];
}"
`;

exports[`misc class-static-block 1`] = `
"class foo {
  static {
    this; // should not be replaced by undefined
  }
}"
`;

exports[`misc copy-getters-setters 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "Foo", {
  enumerable: true,
  get: function () {
    return Foo.default;
  }
});
Object.defineProperty(exports, "baz", {
  enumerable: true,
  get: function () {
    return _moduleWithGetter.baz;
  }
});
var _moduleWithGetter = require("./moduleWithGetter");
var Foo = _interopDefault(_moduleWithGetter);"
`;

exports[`misc copy-getters-setters-star 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
var _moduleWithGetter = require("./moduleWithGetter");
var foo = _interopNamespace(_moduleWithGetter);"
`;

exports[`misc export-expr-with-same-name 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = function someFunction() {};"
`;

exports[`misc export-let-function-name 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
Object.defineProperty(exports, "c", {
  enumerable: true,
  get: function () {
    return c;
  }
});
Object.defineProperty(exports, "d", {
  enumerable: true,
  get: function () {
    return d;
  }
});
Object.defineProperty(exports, "e", {
  enumerable: true,
  get: function () {
    return e;
  }
});
let a = function () {};
let b = function X() {};
let c = () => {};
let d = class {};
let e = class Y {};"
`;

exports[`misc export-let-function-name-with-fn-name-transform 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
Object.defineProperty(exports, "c", {
  enumerable: true,
  get: function () {
    return c;
  }
});
Object.defineProperty(exports, "d", {
  enumerable: true,
  get: function () {
    return d;
  }
});
Object.defineProperty(exports, "e", {
  enumerable: true,
  get: function () {
    return e;
  }
});
let a = function () {};
let b = function X() {};
let c = () => {};
let d = class {};
let e = class Y {};"
`;

exports[`misc export-var-and-modify 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
var a;
a += 1;
a -= 1;
a *= 1;
a /= 1;
a %= 1;
a **= 1;
a <<= 1;
a >>= 1;
a >>>= 1;
a &= 1;
a ^= 1;
a |= 1;
a &&= 1;
a ||= 1;
a ??= 1;"
`;

exports[`misc for-of-in-export 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
let foo;
for (foo of []) {}
for (foo in []) {}
for (foo of []) {
  let foo;
}
for ({
  foo
} of []) {}
for ({
  foo
} of []) {
  let foo;
}
for ({
  test: {
    foo
  }
} of []) {}
for ([foo, [...foo]] of []) {}
for ([foo, [...foo]] of []) {
  let foo;
}
for (foo of []);
{
  let foo;
  for (foo of []) {}
}"
`;

exports[`misc import-const-throw 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _foo = require("foo");
var Foo = _interopDefault(_foo);
var _bar = require("bar");
var Bar = _interopNamespace(_bar);
var _baz = require("baz");
Foo = 42;
Bar = 43;
Baz = 44;
({
  Foo
} = {});
({
  Bar
} = {});
({
  Baz
} = {});
({
  prop: Foo
} = {});
({
  prop: Bar
} = {});
({
  prop: Baz
} = {});
Foo += 2;
Bar += 2;
Baz += 2;
Foo >>>= 3;
Bar >>>= 3;
Baz >>>= 3;
Foo &&= 4;
Bar &&= 4;
Baz &&= 4;
--Foo.default;
--Bar;
--_baz.Baz;
Foo.default++;
Bar++;
_baz.Baz++;
for (Foo.default in {});
for (Bar in {}) {}
for (_baz.Baz of []) {
  let Baz;
}
for ({
  Foo
} in {}) {}
for ([Bar] in {}) {}
for ([...Baz] in {}) {}"
`;

exports[`misc import-shadowed-assign 1`] = `
"function f(foo) {
  foo = 2;
  [foo] = [];
  ({
    foo
  } = {});
}
foo = 2;
[foo] = [];
({
  foo
} = {});"
`;

exports[`misc local-exports-decl-top-level 1`] = `
"require("foo");
var exports = "local exports";
var module = "local module";
console.log(exports);
console.log(exports.prop);
exports++;
exports += 4;
({
  exports
} = {});
[exports] = [];
exports = {};
exports.prop = "";
console.log(module);
console.log(module.exports);
module++;
module += 4;
({
  module
} = {});
[module] = [];
module = {};
module.prop = "";"
`;

exports[`misc local-exports-decl-with-esm-exports 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "x", {
  enumerable: true,
  get: function () {
    return x;
  }
});
var exports = 1;
let x = 2;
function fn() {
  x = 3;
  var exports = 4;
}"
`;

exports[`misc local-exports-inject-var-declarations 1`] = `""`;

exports[`misc local-exports-invalid-inject-undefined 1`] = `""`;

exports[`misc local-exports-var-declarations 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "A", {
  enumerable: true,
  get: function () {
    return A;
  }
});
Object.defineProperty(exports, "B", {
  enumerable: true,
  get: function () {
    return B;
  }
});
Object.defineProperty(exports, "C", {
  enumerable: true,
  get: function () {
    return C;
  }
});
{
  var A;
  switch (0) {
    case 1:
      var B;
      if (2) var C;
  }
}"
`;

exports[`misc module-exports 1`] = `
"require("foo");
console.log(exports);
console.log(exports.prop);
exports++;
exports += 4;
({
  exports
} = {});
[exports] = [];
exports = {};
exports.prop = "";
console.log(module);
console.log(module.exports);
module++;
module += 4;
({
  module
} = {});
[module] = [];
module = {};
module.prop = "";"
`;

exports[`misc reference-source-map 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _one = require("one");
var aDefault = _interopDefault(_one);
var _two = require("two");
var _three = require("three");
var _four = require("four");
var aNamespace = _interopNamespace(_four);
console.log(aDefault.default);
console.log(_two.aNamed);
console.log(_three.orig);
console.log(aNamespace);
console.log(aDefault.default());
console.log(_two.aNamed());
console.log(_three.orig());
console.log(aNamespace());"
`;

exports[`misc undefined-this-arrow-function 1`] = `"var foo = () => this;"`;

exports[`misc undefined-this-computed-class-method-1 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "C", {
  enumerable: true,
  get: function () {
    return C;
  }
});
class C {
  [this.name]() {}
}"
`;

exports[`misc undefined-this-computed-class-method-2 1`] = `
"class A {
  [() => this.name]() {}
}"
`;

exports[`misc undefined-this-computed-class-method-3 1`] = `
"class A {
  [function () {
    this.name;
  }]() {}
}"
`;

exports[`misc undefined-this-computed-class-property-name 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "C", {
  enumerable: true,
  get: function () {
    return C;
  }
});
class C {
  [this.name] = 42;
}"
`;

exports[`misc undefined-this-root-call 1`] = `"this.foo();"`;

exports[`misc undefined-this-root-declaration 1`] = `"var self = this;"`;

exports[`misc undefined-this-root-reference 1`] = `"this;"`;

exports[`regression 4462-T7565 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "yy", {
  enumerable: true,
  get: function () {
    return yy;
  }
});
Object.defineProperty(exports, "zz", {
  enumerable: true,
  get: function () {
    return zz;
  }
});
var yy = 0;
var zz = yy++;"
`;

exports[`regression T7160 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
var foo = function (gen, ctx = null) {};
var bar = (gen, ctx = null) => {};"
`;

exports[`regression T7165 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _bar = require('bar');
Object.keys(_bar).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _bar[k];
      }
    });
  }
});
const anything = {};"
`;

exports[`regression T7199 1`] = `"const [x] = bar;"`;

exports[`regression T7272 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "state", {
  enumerable: true,
  get: function () {
    return state;
  }
});
const state = state => state.a;"
`;

exports[`regression es3-compatibility 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _foo = require('foo');
var foo = _interopDefault(_foo);
console.log(foo.default);
var _default = 5;"
`;

exports[`regression es3-compatibility-class 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _ref;
  }
});
class _ref {}"
`;

exports[`regression es3-compatibility-function 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _ref;
  }
});
function _ref() {}"
`;

exports[`regression es3-compatibility-named-class 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return Foo;
  }
});
class Foo {}"
`;

exports[`regression es3-compatibility-named-function 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return bat;
  }
});
function bat() {}"
`;

exports[`regression issue-9155 1`] = `""`;

exports[`regression issue-9611 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _ref;
  }
});
function _ref(x) {}"
`;

exports[`regression lazy-7176 1`] = `
"function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _mod = require("mod");
var mod = _interopNamespace(_mod);
_mod.named;
mod;"
`;

exports[`regression many-exports-chunked 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "a000", {
  enumerable: true,
  get: function () {
    return a000;
  }
});
Object.defineProperty(exports, "a001", {
  enumerable: true,
  get: function () {
    return a001;
  }
});
Object.defineProperty(exports, "a002", {
  enumerable: true,
  get: function () {
    return a002;
  }
});
Object.defineProperty(exports, "a003", {
  enumerable: true,
  get: function () {
    return a003;
  }
});
Object.defineProperty(exports, "a004", {
  enumerable: true,
  get: function () {
    return a004;
  }
});
Object.defineProperty(exports, "a005", {
  enumerable: true,
  get: function () {
    return a005;
  }
});
Object.defineProperty(exports, "a006", {
  enumerable: true,
  get: function () {
    return a006;
  }
});
Object.defineProperty(exports, "a007", {
  enumerable: true,
  get: function () {
    return a007;
  }
});
Object.defineProperty(exports, "a008", {
  enumerable: true,
  get: function () {
    return a008;
  }
});
Object.defineProperty(exports, "a009", {
  enumerable: true,
  get: function () {
    return a009;
  }
});
Object.defineProperty(exports, "a010", {
  enumerable: true,
  get: function () {
    return a010;
  }
});
Object.defineProperty(exports, "a011", {
  enumerable: true,
  get: function () {
    return a011;
  }
});
Object.defineProperty(exports, "a012", {
  enumerable: true,
  get: function () {
    return a012;
  }
});
Object.defineProperty(exports, "a013", {
  enumerable: true,
  get: function () {
    return a013;
  }
});
Object.defineProperty(exports, "a014", {
  enumerable: true,
  get: function () {
    return a014;
  }
});
Object.defineProperty(exports, "a015", {
  enumerable: true,
  get: function () {
    return a015;
  }
});
Object.defineProperty(exports, "a016", {
  enumerable: true,
  get: function () {
    return a016;
  }
});
Object.defineProperty(exports, "a017", {
  enumerable: true,
  get: function () {
    return a017;
  }
});
Object.defineProperty(exports, "a018", {
  enumerable: true,
  get: function () {
    return a018;
  }
});
Object.defineProperty(exports, "a019", {
  enumerable: true,
  get: function () {
    return a019;
  }
});
Object.defineProperty(exports, "a020", {
  enumerable: true,
  get: function () {
    return a020;
  }
});
Object.defineProperty(exports, "a021", {
  enumerable: true,
  get: function () {
    return a021;
  }
});
Object.defineProperty(exports, "a022", {
  enumerable: true,
  get: function () {
    return a022;
  }
});
Object.defineProperty(exports, "a023", {
  enumerable: true,
  get: function () {
    return a023;
  }
});
Object.defineProperty(exports, "a024", {
  enumerable: true,
  get: function () {
    return a024;
  }
});
Object.defineProperty(exports, "a025", {
  enumerable: true,
  get: function () {
    return a025;
  }
});
Object.defineProperty(exports, "a026", {
  enumerable: true,
  get: function () {
    return a026;
  }
});
Object.defineProperty(exports, "a027", {
  enumerable: true,
  get: function () {
    return a027;
  }
});
Object.defineProperty(exports, "a028", {
  enumerable: true,
  get: function () {
    return a028;
  }
});
Object.defineProperty(exports, "a029", {
  enumerable: true,
  get: function () {
    return a029;
  }
});
Object.defineProperty(exports, "a030", {
  enumerable: true,
  get: function () {
    return a030;
  }
});
Object.defineProperty(exports, "a031", {
  enumerable: true,
  get: function () {
    return a031;
  }
});
Object.defineProperty(exports, "a032", {
  enumerable: true,
  get: function () {
    return a032;
  }
});
Object.defineProperty(exports, "a033", {
  enumerable: true,
  get: function () {
    return a033;
  }
});
Object.defineProperty(exports, "a034", {
  enumerable: true,
  get: function () {
    return a034;
  }
});
Object.defineProperty(exports, "a035", {
  enumerable: true,
  get: function () {
    return a035;
  }
});
Object.defineProperty(exports, "a036", {
  enumerable: true,
  get: function () {
    return a036;
  }
});
Object.defineProperty(exports, "a037", {
  enumerable: true,
  get: function () {
    return a037;
  }
});
Object.defineProperty(exports, "a038", {
  enumerable: true,
  get: function () {
    return a038;
  }
});
Object.defineProperty(exports, "a039", {
  enumerable: true,
  get: function () {
    return a039;
  }
});
Object.defineProperty(exports, "a040", {
  enumerable: true,
  get: function () {
    return a040;
  }
});
Object.defineProperty(exports, "a041", {
  enumerable: true,
  get: function () {
    return a041;
  }
});
Object.defineProperty(exports, "a042", {
  enumerable: true,
  get: function () {
    return a042;
  }
});
Object.defineProperty(exports, "a043", {
  enumerable: true,
  get: function () {
    return a043;
  }
});
Object.defineProperty(exports, "a044", {
  enumerable: true,
  get: function () {
    return a044;
  }
});
Object.defineProperty(exports, "a045", {
  enumerable: true,
  get: function () {
    return a045;
  }
});
Object.defineProperty(exports, "a046", {
  enumerable: true,
  get: function () {
    return a046;
  }
});
Object.defineProperty(exports, "a047", {
  enumerable: true,
  get: function () {
    return a047;
  }
});
Object.defineProperty(exports, "a048", {
  enumerable: true,
  get: function () {
    return a048;
  }
});
Object.defineProperty(exports, "a049", {
  enumerable: true,
  get: function () {
    return a049;
  }
});
Object.defineProperty(exports, "a050", {
  enumerable: true,
  get: function () {
    return a050;
  }
});
Object.defineProperty(exports, "a051", {
  enumerable: true,
  get: function () {
    return a051;
  }
});
Object.defineProperty(exports, "a052", {
  enumerable: true,
  get: function () {
    return a052;
  }
});
Object.defineProperty(exports, "a053", {
  enumerable: true,
  get: function () {
    return a053;
  }
});
Object.defineProperty(exports, "a054", {
  enumerable: true,
  get: function () {
    return a054;
  }
});
Object.defineProperty(exports, "a055", {
  enumerable: true,
  get: function () {
    return a055;
  }
});
Object.defineProperty(exports, "a056", {
  enumerable: true,
  get: function () {
    return a056;
  }
});
Object.defineProperty(exports, "a057", {
  enumerable: true,
  get: function () {
    return a057;
  }
});
Object.defineProperty(exports, "a058", {
  enumerable: true,
  get: function () {
    return a058;
  }
});
Object.defineProperty(exports, "a059", {
  enumerable: true,
  get: function () {
    return a059;
  }
});
Object.defineProperty(exports, "a060", {
  enumerable: true,
  get: function () {
    return a060;
  }
});
Object.defineProperty(exports, "a061", {
  enumerable: true,
  get: function () {
    return a061;
  }
});
Object.defineProperty(exports, "a062", {
  enumerable: true,
  get: function () {
    return a062;
  }
});
Object.defineProperty(exports, "a063", {
  enumerable: true,
  get: function () {
    return a063;
  }
});
Object.defineProperty(exports, "a064", {
  enumerable: true,
  get: function () {
    return a064;
  }
});
Object.defineProperty(exports, "a065", {
  enumerable: true,
  get: function () {
    return a065;
  }
});
Object.defineProperty(exports, "a066", {
  enumerable: true,
  get: function () {
    return a066;
  }
});
Object.defineProperty(exports, "a067", {
  enumerable: true,
  get: function () {
    return a067;
  }
});
Object.defineProperty(exports, "a068", {
  enumerable: true,
  get: function () {
    return a068;
  }
});
Object.defineProperty(exports, "a069", {
  enumerable: true,
  get: function () {
    return a069;
  }
});
Object.defineProperty(exports, "a070", {
  enumerable: true,
  get: function () {
    return a070;
  }
});
Object.defineProperty(exports, "a071", {
  enumerable: true,
  get: function () {
    return a071;
  }
});
Object.defineProperty(exports, "a072", {
  enumerable: true,
  get: function () {
    return a072;
  }
});
Object.defineProperty(exports, "a073", {
  enumerable: true,
  get: function () {
    return a073;
  }
});
Object.defineProperty(exports, "a074", {
  enumerable: true,
  get: function () {
    return a074;
  }
});
Object.defineProperty(exports, "a075", {
  enumerable: true,
  get: function () {
    return a075;
  }
});
Object.defineProperty(exports, "a076", {
  enumerable: true,
  get: function () {
    return a076;
  }
});
Object.defineProperty(exports, "a077", {
  enumerable: true,
  get: function () {
    return a077;
  }
});
Object.defineProperty(exports, "a078", {
  enumerable: true,
  get: function () {
    return a078;
  }
});
Object.defineProperty(exports, "a079", {
  enumerable: true,
  get: function () {
    return a079;
  }
});
Object.defineProperty(exports, "a080", {
  enumerable: true,
  get: function () {
    return a080;
  }
});
Object.defineProperty(exports, "a081", {
  enumerable: true,
  get: function () {
    return a081;
  }
});
Object.defineProperty(exports, "a082", {
  enumerable: true,
  get: function () {
    return a082;
  }
});
Object.defineProperty(exports, "a083", {
  enumerable: true,
  get: function () {
    return a083;
  }
});
Object.defineProperty(exports, "a084", {
  enumerable: true,
  get: function () {
    return a084;
  }
});
Object.defineProperty(exports, "a085", {
  enumerable: true,
  get: function () {
    return a085;
  }
});
Object.defineProperty(exports, "a086", {
  enumerable: true,
  get: function () {
    return a086;
  }
});
Object.defineProperty(exports, "a087", {
  enumerable: true,
  get: function () {
    return a087;
  }
});
Object.defineProperty(exports, "a088", {
  enumerable: true,
  get: function () {
    return a088;
  }
});
Object.defineProperty(exports, "a089", {
  enumerable: true,
  get: function () {
    return a089;
  }
});
Object.defineProperty(exports, "a090", {
  enumerable: true,
  get: function () {
    return a090;
  }
});
Object.defineProperty(exports, "a091", {
  enumerable: true,
  get: function () {
    return a091;
  }
});
Object.defineProperty(exports, "a092", {
  enumerable: true,
  get: function () {
    return a092;
  }
});
Object.defineProperty(exports, "a093", {
  enumerable: true,
  get: function () {
    return a093;
  }
});
Object.defineProperty(exports, "a094", {
  enumerable: true,
  get: function () {
    return a094;
  }
});
Object.defineProperty(exports, "a095", {
  enumerable: true,
  get: function () {
    return a095;
  }
});
Object.defineProperty(exports, "a096", {
  enumerable: true,
  get: function () {
    return a096;
  }
});
Object.defineProperty(exports, "a097", {
  enumerable: true,
  get: function () {
    return a097;
  }
});
Object.defineProperty(exports, "a098", {
  enumerable: true,
  get: function () {
    return a098;
  }
});
Object.defineProperty(exports, "a099", {
  enumerable: true,
  get: function () {
    return a099;
  }
});
Object.defineProperty(exports, "a100", {
  enumerable: true,
  get: function () {
    return a100;
  }
});
Object.defineProperty(exports, "a101", {
  enumerable: true,
  get: function () {
    return a101;
  }
});
Object.defineProperty(exports, "a102", {
  enumerable: true,
  get: function () {
    return a102;
  }
});
Object.defineProperty(exports, "a103", {
  enumerable: true,
  get: function () {
    return a103;
  }
});
Object.defineProperty(exports, "a104", {
  enumerable: true,
  get: function () {
    return a104;
  }
});
Object.defineProperty(exports, "a105", {
  enumerable: true,
  get: function () {
    return a105;
  }
});
Object.defineProperty(exports, "a106", {
  enumerable: true,
  get: function () {
    return a106;
  }
});
Object.defineProperty(exports, "a107", {
  enumerable: true,
  get: function () {
    return a107;
  }
});
Object.defineProperty(exports, "a108", {
  enumerable: true,
  get: function () {
    return a108;
  }
});
Object.defineProperty(exports, "a109", {
  enumerable: true,
  get: function () {
    return a109;
  }
});
Object.defineProperty(exports, "a110", {
  enumerable: true,
  get: function () {
    return a110;
  }
});
Object.defineProperty(exports, "a111", {
  enumerable: true,
  get: function () {
    return a111;
  }
});
Object.defineProperty(exports, "a112", {
  enumerable: true,
  get: function () {
    return a112;
  }
});
Object.defineProperty(exports, "a113", {
  enumerable: true,
  get: function () {
    return a113;
  }
});
Object.defineProperty(exports, "a114", {
  enumerable: true,
  get: function () {
    return a114;
  }
});
Object.defineProperty(exports, "a115", {
  enumerable: true,
  get: function () {
    return a115;
  }
});
Object.defineProperty(exports, "a116", {
  enumerable: true,
  get: function () {
    return a116;
  }
});
Object.defineProperty(exports, "a117", {
  enumerable: true,
  get: function () {
    return a117;
  }
});
Object.defineProperty(exports, "a118", {
  enumerable: true,
  get: function () {
    return a118;
  }
});
Object.defineProperty(exports, "a119", {
  enumerable: true,
  get: function () {
    return a119;
  }
});
Object.defineProperty(exports, "a120", {
  enumerable: true,
  get: function () {
    return a120;
  }
});
Object.defineProperty(exports, "a121", {
  enumerable: true,
  get: function () {
    return a121;
  }
});
Object.defineProperty(exports, "a122", {
  enumerable: true,
  get: function () {
    return a122;
  }
});
Object.defineProperty(exports, "a123", {
  enumerable: true,
  get: function () {
    return a123;
  }
});
Object.defineProperty(exports, "a124", {
  enumerable: true,
  get: function () {
    return a124;
  }
});
Object.defineProperty(exports, "a125", {
  enumerable: true,
  get: function () {
    return a125;
  }
});
Object.defineProperty(exports, "a126", {
  enumerable: true,
  get: function () {
    return a126;
  }
});
Object.defineProperty(exports, "a127", {
  enumerable: true,
  get: function () {
    return a127;
  }
});
Object.defineProperty(exports, "a128", {
  enumerable: true,
  get: function () {
    return a128;
  }
});
Object.defineProperty(exports, "a129", {
  enumerable: true,
  get: function () {
    return a129;
  }
});
Object.defineProperty(exports, "a130", {
  enumerable: true,
  get: function () {
    return a130;
  }
});
Object.defineProperty(exports, "a131", {
  enumerable: true,
  get: function () {
    return a131;
  }
});
Object.defineProperty(exports, "a132", {
  enumerable: true,
  get: function () {
    return a132;
  }
});
Object.defineProperty(exports, "a133", {
  enumerable: true,
  get: function () {
    return a133;
  }
});
Object.defineProperty(exports, "a134", {
  enumerable: true,
  get: function () {
    return a134;
  }
});
Object.defineProperty(exports, "a135", {
  enumerable: true,
  get: function () {
    return a135;
  }
});
Object.defineProperty(exports, "a136", {
  enumerable: true,
  get: function () {
    return a136;
  }
});
Object.defineProperty(exports, "a137", {
  enumerable: true,
  get: function () {
    return a137;
  }
});
Object.defineProperty(exports, "a138", {
  enumerable: true,
  get: function () {
    return a138;
  }
});
Object.defineProperty(exports, "a139", {
  enumerable: true,
  get: function () {
    return a139;
  }
});
Object.defineProperty(exports, "a140", {
  enumerable: true,
  get: function () {
    return a140;
  }
});
Object.defineProperty(exports, "a141", {
  enumerable: true,
  get: function () {
    return a141;
  }
});
Object.defineProperty(exports, "a142", {
  enumerable: true,
  get: function () {
    return a142;
  }
});
Object.defineProperty(exports, "a143", {
  enumerable: true,
  get: function () {
    return a143;
  }
});
Object.defineProperty(exports, "a144", {
  enumerable: true,
  get: function () {
    return a144;
  }
});
Object.defineProperty(exports, "a145", {
  enumerable: true,
  get: function () {
    return a145;
  }
});
Object.defineProperty(exports, "a146", {
  enumerable: true,
  get: function () {
    return a146;
  }
});
Object.defineProperty(exports, "a147", {
  enumerable: true,
  get: function () {
    return a147;
  }
});
Object.defineProperty(exports, "a148", {
  enumerable: true,
  get: function () {
    return a148;
  }
});
Object.defineProperty(exports, "a149", {
  enumerable: true,
  get: function () {
    return a149;
  }
});
Object.defineProperty(exports, "a150", {
  enumerable: true,
  get: function () {
    return a150;
  }
});
Object.defineProperty(exports, "a151", {
  enumerable: true,
  get: function () {
    return a151;
  }
});
Object.defineProperty(exports, "a152", {
  enumerable: true,
  get: function () {
    return a152;
  }
});
Object.defineProperty(exports, "a153", {
  enumerable: true,
  get: function () {
    return a153;
  }
});
Object.defineProperty(exports, "a154", {
  enumerable: true,
  get: function () {
    return a154;
  }
});
Object.defineProperty(exports, "a155", {
  enumerable: true,
  get: function () {
    return a155;
  }
});
Object.defineProperty(exports, "a156", {
  enumerable: true,
  get: function () {
    return a156;
  }
});
Object.defineProperty(exports, "a157", {
  enumerable: true,
  get: function () {
    return a157;
  }
});
Object.defineProperty(exports, "a158", {
  enumerable: true,
  get: function () {
    return a158;
  }
});
Object.defineProperty(exports, "a159", {
  enumerable: true,
  get: function () {
    return a159;
  }
});
Object.defineProperty(exports, "a160", {
  enumerable: true,
  get: function () {
    return a160;
  }
});
Object.defineProperty(exports, "a161", {
  enumerable: true,
  get: function () {
    return a161;
  }
});
Object.defineProperty(exports, "a162", {
  enumerable: true,
  get: function () {
    return a162;
  }
});
Object.defineProperty(exports, "a163", {
  enumerable: true,
  get: function () {
    return a163;
  }
});
Object.defineProperty(exports, "a164", {
  enumerable: true,
  get: function () {
    return a164;
  }
});
Object.defineProperty(exports, "a165", {
  enumerable: true,
  get: function () {
    return a165;
  }
});
Object.defineProperty(exports, "a166", {
  enumerable: true,
  get: function () {
    return a166;
  }
});
Object.defineProperty(exports, "a167", {
  enumerable: true,
  get: function () {
    return a167;
  }
});
Object.defineProperty(exports, "a168", {
  enumerable: true,
  get: function () {
    return a168;
  }
});
Object.defineProperty(exports, "a169", {
  enumerable: true,
  get: function () {
    return a169;
  }
});
Object.defineProperty(exports, "a170", {
  enumerable: true,
  get: function () {
    return a170;
  }
});
Object.defineProperty(exports, "a171", {
  enumerable: true,
  get: function () {
    return a171;
  }
});
Object.defineProperty(exports, "a172", {
  enumerable: true,
  get: function () {
    return a172;
  }
});
Object.defineProperty(exports, "a173", {
  enumerable: true,
  get: function () {
    return a173;
  }
});
Object.defineProperty(exports, "a174", {
  enumerable: true,
  get: function () {
    return a174;
  }
});
Object.defineProperty(exports, "a175", {
  enumerable: true,
  get: function () {
    return a175;
  }
});
Object.defineProperty(exports, "a176", {
  enumerable: true,
  get: function () {
    return a176;
  }
});
Object.defineProperty(exports, "a177", {
  enumerable: true,
  get: function () {
    return a177;
  }
});
Object.defineProperty(exports, "a178", {
  enumerable: true,
  get: function () {
    return a178;
  }
});
Object.defineProperty(exports, "a179", {
  enumerable: true,
  get: function () {
    return a179;
  }
});
Object.defineProperty(exports, "a180", {
  enumerable: true,
  get: function () {
    return a180;
  }
});
Object.defineProperty(exports, "a181", {
  enumerable: true,
  get: function () {
    return a181;
  }
});
Object.defineProperty(exports, "a182", {
  enumerable: true,
  get: function () {
    return a182;
  }
});
Object.defineProperty(exports, "a183", {
  enumerable: true,
  get: function () {
    return a183;
  }
});
Object.defineProperty(exports, "a184", {
  enumerable: true,
  get: function () {
    return a184;
  }
});
Object.defineProperty(exports, "a185", {
  enumerable: true,
  get: function () {
    return a185;
  }
});
Object.defineProperty(exports, "a186", {
  enumerable: true,
  get: function () {
    return a186;
  }
});
Object.defineProperty(exports, "a187", {
  enumerable: true,
  get: function () {
    return a187;
  }
});
Object.defineProperty(exports, "a188", {
  enumerable: true,
  get: function () {
    return a188;
  }
});
Object.defineProperty(exports, "a189", {
  enumerable: true,
  get: function () {
    return a189;
  }
});
Object.defineProperty(exports, "a190", {
  enumerable: true,
  get: function () {
    return a190;
  }
});
Object.defineProperty(exports, "a191", {
  enumerable: true,
  get: function () {
    return a191;
  }
});
Object.defineProperty(exports, "a192", {
  enumerable: true,
  get: function () {
    return a192;
  }
});
Object.defineProperty(exports, "a193", {
  enumerable: true,
  get: function () {
    return a193;
  }
});
Object.defineProperty(exports, "a194", {
  enumerable: true,
  get: function () {
    return a194;
  }
});
Object.defineProperty(exports, "a195", {
  enumerable: true,
  get: function () {
    return a195;
  }
});
Object.defineProperty(exports, "a196", {
  enumerable: true,
  get: function () {
    return a196;
  }
});
Object.defineProperty(exports, "a197", {
  enumerable: true,
  get: function () {
    return a197;
  }
});
Object.defineProperty(exports, "a198", {
  enumerable: true,
  get: function () {
    return a198;
  }
});
Object.defineProperty(exports, "a199", {
  enumerable: true,
  get: function () {
    return a199;
  }
});
Object.defineProperty(exports, "a200", {
  enumerable: true,
  get: function () {
    return a200;
  }
});
Object.defineProperty(exports, "a201", {
  enumerable: true,
  get: function () {
    return a201;
  }
});
Object.defineProperty(exports, "a202", {
  enumerable: true,
  get: function () {
    return a202;
  }
});
Object.defineProperty(exports, "a203", {
  enumerable: true,
  get: function () {
    return a203;
  }
});
Object.defineProperty(exports, "a204", {
  enumerable: true,
  get: function () {
    return a204;
  }
});
Object.defineProperty(exports, "a205", {
  enumerable: true,
  get: function () {
    return a205;
  }
});
Object.defineProperty(exports, "a206", {
  enumerable: true,
  get: function () {
    return a206;
  }
});
Object.defineProperty(exports, "a207", {
  enumerable: true,
  get: function () {
    return a207;
  }
});
Object.defineProperty(exports, "a208", {
  enumerable: true,
  get: function () {
    return a208;
  }
});
Object.defineProperty(exports, "a209", {
  enumerable: true,
  get: function () {
    return a209;
  }
});
Object.defineProperty(exports, "a210", {
  enumerable: true,
  get: function () {
    return a210;
  }
});
Object.defineProperty(exports, "a211", {
  enumerable: true,
  get: function () {
    return a211;
  }
});
Object.defineProperty(exports, "a212", {
  enumerable: true,
  get: function () {
    return a212;
  }
});
Object.defineProperty(exports, "a213", {
  enumerable: true,
  get: function () {
    return a213;
  }
});
Object.defineProperty(exports, "a214", {
  enumerable: true,
  get: function () {
    return a214;
  }
});
Object.defineProperty(exports, "a215", {
  enumerable: true,
  get: function () {
    return a215;
  }
});
Object.defineProperty(exports, "a216", {
  enumerable: true,
  get: function () {
    return a216;
  }
});
Object.defineProperty(exports, "a217", {
  enumerable: true,
  get: function () {
    return a217;
  }
});
Object.defineProperty(exports, "a218", {
  enumerable: true,
  get: function () {
    return a218;
  }
});
Object.defineProperty(exports, "a219", {
  enumerable: true,
  get: function () {
    return a219;
  }
});
Object.defineProperty(exports, "a220", {
  enumerable: true,
  get: function () {
    return a220;
  }
});
Object.defineProperty(exports, "a221", {
  enumerable: true,
  get: function () {
    return a221;
  }
});
Object.defineProperty(exports, "a222", {
  enumerable: true,
  get: function () {
    return a222;
  }
});
Object.defineProperty(exports, "a223", {
  enumerable: true,
  get: function () {
    return a223;
  }
});
Object.defineProperty(exports, "a224", {
  enumerable: true,
  get: function () {
    return a224;
  }
});
Object.defineProperty(exports, "a225", {
  enumerable: true,
  get: function () {
    return a225;
  }
});
Object.defineProperty(exports, "a226", {
  enumerable: true,
  get: function () {
    return a226;
  }
});
Object.defineProperty(exports, "a227", {
  enumerable: true,
  get: function () {
    return a227;
  }
});
Object.defineProperty(exports, "a228", {
  enumerable: true,
  get: function () {
    return a228;
  }
});
Object.defineProperty(exports, "a229", {
  enumerable: true,
  get: function () {
    return a229;
  }
});
Object.defineProperty(exports, "a230", {
  enumerable: true,
  get: function () {
    return a230;
  }
});
Object.defineProperty(exports, "a231", {
  enumerable: true,
  get: function () {
    return a231;
  }
});
Object.defineProperty(exports, "a232", {
  enumerable: true,
  get: function () {
    return a232;
  }
});
Object.defineProperty(exports, "a233", {
  enumerable: true,
  get: function () {
    return a233;
  }
});
Object.defineProperty(exports, "a234", {
  enumerable: true,
  get: function () {
    return a234;
  }
});
Object.defineProperty(exports, "a235", {
  enumerable: true,
  get: function () {
    return a235;
  }
});
Object.defineProperty(exports, "a236", {
  enumerable: true,
  get: function () {
    return a236;
  }
});
Object.defineProperty(exports, "a237", {
  enumerable: true,
  get: function () {
    return a237;
  }
});
Object.defineProperty(exports, "a238", {
  enumerable: true,
  get: function () {
    return a238;
  }
});
Object.defineProperty(exports, "a239", {
  enumerable: true,
  get: function () {
    return a239;
  }
});
Object.defineProperty(exports, "a240", {
  enumerable: true,
  get: function () {
    return a240;
  }
});
Object.defineProperty(exports, "a241", {
  enumerable: true,
  get: function () {
    return a241;
  }
});
Object.defineProperty(exports, "a242", {
  enumerable: true,
  get: function () {
    return a242;
  }
});
Object.defineProperty(exports, "a243", {
  enumerable: true,
  get: function () {
    return a243;
  }
});
Object.defineProperty(exports, "a244", {
  enumerable: true,
  get: function () {
    return a244;
  }
});
Object.defineProperty(exports, "a245", {
  enumerable: true,
  get: function () {
    return a245;
  }
});
Object.defineProperty(exports, "a246", {
  enumerable: true,
  get: function () {
    return a246;
  }
});
Object.defineProperty(exports, "a247", {
  enumerable: true,
  get: function () {
    return a247;
  }
});
Object.defineProperty(exports, "a248", {
  enumerable: true,
  get: function () {
    return a248;
  }
});
Object.defineProperty(exports, "a249", {
  enumerable: true,
  get: function () {
    return a249;
  }
});
const a000 = 0;
const a001 = 1;
const a002 = 2;
const a003 = 3;
const a004 = 4;
const a005 = 5;
const a006 = 6;
const a007 = 7;
const a008 = 8;
const a009 = 9;
const a010 = 10;
const a011 = 11;
const a012 = 12;
const a013 = 13;
const a014 = 14;
const a015 = 15;
const a016 = 16;
const a017 = 17;
const a018 = 18;
const a019 = 19;
const a020 = 20;
const a021 = 21;
const a022 = 22;
const a023 = 23;
const a024 = 24;
const a025 = 25;
const a026 = 26;
const a027 = 27;
const a028 = 28;
const a029 = 29;
const a030 = 30;
const a031 = 31;
const a032 = 32;
const a033 = 33;
const a034 = 34;
const a035 = 35;
const a036 = 36;
const a037 = 37;
const a038 = 38;
const a039 = 39;
const a040 = 40;
const a041 = 41;
const a042 = 42;
const a043 = 43;
const a044 = 44;
const a045 = 45;
const a046 = 46;
const a047 = 47;
const a048 = 48;
const a049 = 49;
const a050 = 50;
const a051 = 51;
const a052 = 52;
const a053 = 53;
const a054 = 54;
const a055 = 55;
const a056 = 56;
const a057 = 57;
const a058 = 58;
const a059 = 59;
const a060 = 60;
const a061 = 61;
const a062 = 62;
const a063 = 63;
const a064 = 64;
const a065 = 65;
const a066 = 66;
const a067 = 67;
const a068 = 68;
const a069 = 69;
const a070 = 70;
const a071 = 71;
const a072 = 72;
const a073 = 73;
const a074 = 74;
const a075 = 75;
const a076 = 76;
const a077 = 77;
const a078 = 78;
const a079 = 79;
const a080 = 80;
const a081 = 81;
const a082 = 82;
const a083 = 83;
const a084 = 84;
const a085 = 85;
const a086 = 86;
const a087 = 87;
const a088 = 88;
const a089 = 89;
const a090 = 90;
const a091 = 91;
const a092 = 92;
const a093 = 93;
const a094 = 94;
const a095 = 95;
const a096 = 96;
const a097 = 97;
const a098 = 98;
const a099 = 99;
const a100 = 100;
const a101 = 101;
const a102 = 102;
const a103 = 103;
const a104 = 104;
const a105 = 105;
const a106 = 106;
const a107 = 107;
const a108 = 108;
const a109 = 109;
const a110 = 110;
const a111 = 111;
const a112 = 112;
const a113 = 113;
const a114 = 114;
const a115 = 115;
const a116 = 116;
const a117 = 117;
const a118 = 118;
const a119 = 119;
const a120 = 120;
const a121 = 121;
const a122 = 122;
const a123 = 123;
const a124 = 124;
const a125 = 125;
const a126 = 126;
const a127 = 127;
const a128 = 128;
const a129 = 129;
const a130 = 130;
const a131 = 131;
const a132 = 132;
const a133 = 133;
const a134 = 134;
const a135 = 135;
const a136 = 136;
const a137 = 137;
const a138 = 138;
const a139 = 139;
const a140 = 140;
const a141 = 141;
const a142 = 142;
const a143 = 143;
const a144 = 144;
const a145 = 145;
const a146 = 146;
const a147 = 147;
const a148 = 148;
const a149 = 149;
const a150 = 150;
const a151 = 151;
const a152 = 152;
const a153 = 153;
const a154 = 154;
const a155 = 155;
const a156 = 156;
const a157 = 157;
const a158 = 158;
const a159 = 159;
const a160 = 160;
const a161 = 161;
const a162 = 162;
const a163 = 163;
const a164 = 164;
const a165 = 165;
const a166 = 166;
const a167 = 167;
const a168 = 168;
const a169 = 169;
const a170 = 170;
const a171 = 171;
const a172 = 172;
const a173 = 173;
const a174 = 174;
const a175 = 175;
const a176 = 176;
const a177 = 177;
const a178 = 178;
const a179 = 179;
const a180 = 180;
const a181 = 181;
const a182 = 182;
const a183 = 183;
const a184 = 184;
const a185 = 185;
const a186 = 186;
const a187 = 187;
const a188 = 188;
const a189 = 189;
const a190 = 190;
const a191 = 191;
const a192 = 192;
const a193 = 193;
const a194 = 194;
const a195 = 195;
const a196 = 196;
const a197 = 197;
const a198 = 198;
const a199 = 199;
const a200 = 200;
const a201 = 201;
const a202 = 202;
const a203 = 203;
const a204 = 204;
const a205 = 205;
const a206 = 206;
const a207 = 207;
const a208 = 208;
const a209 = 209;
const a210 = 210;
const a211 = 211;
const a212 = 212;
const a213 = 213;
const a214 = 214;
const a215 = 215;
const a216 = 216;
const a217 = 217;
const a218 = 218;
const a219 = 219;
const a220 = 220;
const a221 = 221;
const a222 = 222;
const a223 = 223;
const a224 = 224;
const a225 = 225;
const a226 = 226;
const a227 = 227;
const a228 = 228;
const a229 = 229;
const a230 = 230;
const a231 = 231;
const a232 = 232;
const a233 = 233;
const a234 = 234;
const a235 = 235;
const a236 = 236;
const a237 = 237;
const a238 = 238;
const a239 = 239;
const a240 = 240;
const a241 = 241;
const a242 = 242;
const a243 = 243;
const a244 = 244;
const a245 = 245;
const a246 = 246;
const a247 = 247;
const a248 = 248;
const a249 = 249;"
`;

exports[`shadowed-namespace-import transformed-name 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _mod = require("mod");
var t = _interopDefault(_mod);
const foo = e => {
  return {
    amount: t.default.format(1)
  };
};"
`;

exports[`strict export 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
exports.foo = foo;
function foo() {}"
`;

exports[`strict export-1 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = foo;"
`;

exports[`strict export-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
var foo;"
`;

exports[`strict export-3 1`] = `""`;

exports[`strict export-all 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "c", {
  enumerable: true,
  get: function () {
    return _mod.c;
  }
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _ref;
  }
});
Object.defineProperty(exports, "z", {
  enumerable: true,
  get: function () {
    return z;
  }
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
exports.b = b;
Object.defineProperty(exports, "d", {
  enumerable: true,
  get: function () {
    return d;
  }
});
Object.defineProperty(exports, "e", {
  enumerable: true,
  get: function () {
    return e;
  }
});
Object.defineProperty(exports, "f", {
  enumerable: true,
  get: function () {
    return f;
  }
});
var _mod = require('mod');
Object.keys(_mod).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _mod[k];
      }
    });
  }
});
let z = 100;
class a {}
function b() {}
let d = 42;
let e = 1,
  f = 2;
function _ref() {}"
`;

exports[`strict export-const-destructuring-array 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
const [foo, bar] = [];"
`;

exports[`strict export-const-destructuring-array-default-params 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
const [foo, bar = 2] = [];"
`;

exports[`strict export-const-destructuring-array-rest 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
Object.defineProperty(exports, "baz", {
  enumerable: true,
  get: function () {
    return baz;
  }
});
const [foo, bar, ...baz] = [];"
`;

exports[`strict export-const-destructuring-deep 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "baz", {
  enumerable: true,
  get: function () {
    return baz;
  }
});
Object.defineProperty(exports, "qux", {
  enumerable: true,
  get: function () {
    return qux;
  }
});
const {
  foo: {
    bar: [baz, qux]
  }
} = {};"
`;

exports[`strict export-const-destructuring-object 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
Object.defineProperty(exports, "baz", {
  enumerable: true,
  get: function () {
    return baz;
  }
});
const {
  foo: bar,
  baz
} = {};"
`;

exports[`strict export-const-destructuring-object-default-params 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
const {
  foo,
  bar = 1
} = {};"
`;

exports[`strict export-const-destructuring-object-rest 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
const {
  foo,
  ...bar
} = {};"
`;

exports[`strict import 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _foo = require("foo");
var foo = _interopDefault(_foo);
foo.default;
foo.default;
_foo.foo3;
_foo.foo3();
_foo.foo3\`\`;
_foo.foo3?.();"
`;

exports[`strict import-wildcard 1`] = `
"function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    n[k] = e[k];
  });
  n.default = e;
  return n;
}
var _foo = require('foo');
var foo = _interopNamespace(_foo);
foo.bar();
foo.baz();"
`;

exports[`update-expression bigint 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
Object.defineProperty(exports, "baz", {
  enumerable: true,
  get: function () {
    return baz;
  }
});
Object.defineProperty(exports, "foofoo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "barbar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
Object.defineProperty(exports, "bazbaz", {
  enumerable: true,
  get: function () {
    return baz;
  }
});
let foo = 1n;
let bar = foo++;
let baz = ++bar;
expect(foo).toBe(2n);
expect(bar).toBe(2n);
expect(baz).toBe(2n);
--foo;
bar--;
baz--;"
`;

exports[`update-expression negative-suffix 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "diffLevel", {
  enumerable: true,
  get: function () {
    return diffLevel;
  }
});
exports.diff = diff;
let diffLevel = 0;
function diff() {
  if (! --diffLevel) {
    console.log("hey");
  }
}"
`;

exports[`update-expression positive-suffix 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "diffLevel", {
  enumerable: true,
  get: function () {
    return diffLevel;
  }
});
exports.diff = diff;
let diffLevel = 0;
function diff() {
  if (!++diffLevel) {
    console.log("hey");
  }
}"
`;
